--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -64,13 +64,13 @@
          <widget class="QGroupBox" name="classificationGroupBox">
           <property name="minimumSize">
            <size>
-            <width>1000</width>
+            <width>0</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
-            <width>1000</width>
+            <width>16777215</width>
             <height>16777215</height>
            </size>
           </property>
@@ -174,6 +174,18 @@
         </item>
         <item>
          <widget class="QGroupBox" name="speciesGroupBox">
+          <property name="minimumSize">
+           <size>
+            <width>400</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>400</width>
+            <height>16777215</height>
+           </size>
+          </property>
           <property name="title">
            <string>Espèce</string>
           </property>
@@ -231,7 +243,20 @@
               </widget>
              </item>
              <item row="1" column="0">
-              <widget class="QGraphicsView" name="speciesPhotoGraphicsViews"/>
+              <widget class="QGraphicsView" name="speciesPhotoGraphicsView">
+               <property name="frameShape">
+                <enum>QFrame::Shape::Panel</enum>
+               </property>
+               <property name="interactive">
+                <bool>false</bool>
+               </property>
+               <property name="renderHints">
+                <set>QPainter::RenderHint::LosslessImageRendering|QPainter::RenderHint::SmoothPixmapTransform|QPainter::RenderHint::TextAntialiasing</set>
+               </property>
+               <property name="resizeAnchor">
+                <enum>QGraphicsView::ViewportAnchor::AnchorViewCenter</enum>
+               </property>
+              </widget>
              </item>
              <item row="2" column="0">
               <widget class="QGroupBox" name="speciesInfosGroupBox">
@@ -374,7 +399,19 @@
          </widget>
         </item>
         <item>
-         <widget class="QGroupBox" name="observationsGroupBox">
+         <widget class="QGroupBox" name="observationGroupBox">
+          <property name="minimumSize">
+           <size>
+            <width>400</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>400</width>
+            <height>16777215</height>
+           </size>
+          </property>
           <property name="title">
            <string>Observations</string>
           </property>
@@ -385,14 +422,14 @@
            <item row="0" column="0">
             <layout class="QGridLayout" name="gridLayout_7">
              <item row="0" column="0">
-              <widget class="QPushButton" name="observationsAddPushButton">
+              <widget class="QPushButton" name="observationAddPushButton">
                <property name="text">
                 <string>Ajouter</string>
                </property>
               </widget>
              </item>
              <item row="1" column="0">
-              <widget class="QGroupBox" name="observationsListGroupeBox">
+              <widget class="QGroupBox" name="observationListGroupeBox">
                <property name="title">
                 <string>Liste</string>
                </property>
@@ -400,7 +437,7 @@
                 <item row="0" column="0">
                  <layout class="QGridLayout" name="gridLayout_5">
                   <item row="0" column="0">
-                   <widget class="QPushButton" name="observationsListPreviousPushButton">
+                   <widget class="QPushButton" name="observationListPreviousPushButton">
                     <property name="minimumSize">
                      <size>
                       <width>50</width>
@@ -419,7 +456,7 @@
                    </widget>
                   </item>
                   <item row="0" column="1">
-                   <widget class="QLabel" name="observationsDateLabel">
+                   <widget class="QLabel" name="observationDateLabel">
                     <property name="text">
                      <string/>
                     </property>
@@ -429,7 +466,7 @@
                    </widget>
                   </item>
                   <item row="0" column="2">
-                   <widget class="QPushButton" name="observationsListNextPushButton">
+                   <widget class="QPushButton" name="observationListNextPushButton">
                     <property name="minimumSize">
                      <size>
                       <width>50</width>
@@ -453,7 +490,7 @@
               </widget>
              </item>
              <item row="2" column="0">
-              <widget class="QGroupBox" name="observationsPhotosGroupBox">
+              <widget class="QGroupBox" name="observationPhotosGroupBox">
                <property name="title">
                 <string>Photos</string>
                </property>
@@ -461,7 +498,7 @@
                 <item row="0" column="0">
                  <layout class="QGridLayout" name="gridLayout_3">
                   <item row="0" column="0">
-                   <widget class="QPushButton" name="observationsPhotosPreviousPushButton">
+                   <widget class="QPushButton" name="observationPhotosPreviousPushButton">
                     <property name="minimumSize">
                      <size>
                       <width>50</width>
@@ -480,10 +517,10 @@
                    </widget>
                   </item>
                   <item row="0" column="1">
-                   <widget class="QGraphicsView" name="observationsPhotosGraphicView"/>
+                   <widget class="QGraphicsView" name="observationPhotosGraphicView"/>
                   </item>
                   <item row="0" column="2">
-                   <widget class="QPushButton" name="observationsPhotosNextPushButton">
+                   <widget class="QPushButton" name="observationPhotosNextPushButton">
                     <property name="minimumSize">
                      <size>
                       <width>50</width>
@@ -507,7 +544,7 @@
               </widget>
              </item>
              <item row="3" column="0">
-              <widget class="QGroupBox" name="observationsInfosGroupBox">
+              <widget class="QGroupBox" name="observationInfosGroupBox">
                <property name="title">
                 <string>Infos</string>
                </property>
@@ -515,7 +552,7 @@
                 <item row="0" column="0">
                  <layout class="QGridLayout" name="gridLayout">
                   <item row="4" column="1">
-                   <widget class="QLabel" name="observationsFieldContentLabel">
+                   <widget class="QLabel" name="observationDescriptionContentLabel">
                     <property name="text">
                      <string/>
                     </property>
@@ -525,14 +562,14 @@
                    </widget>
                   </item>
                   <item row="4" column="0">
-                   <widget class="QLabel" name="observationsFieldLabel">
+                   <widget class="QLabel" name="observationDescriptionLabel">
                     <property name="text">
                      <string>Description terrain</string>
                     </property>
                    </widget>
                   </item>
                   <item row="1" column="1">
-                   <widget class="QLabel" name="observationsDepartmentContentLabel">
+                   <widget class="QLabel" name="observationDepartmentContentLabel">
                     <property name="text">
                      <string/>
                     </property>
@@ -542,7 +579,7 @@
                    </widget>
                   </item>
                   <item row="0" column="1">
-                   <widget class="QLabel" name="observationsCityContentLabel">
+                   <widget class="QLabel" name="observationCityContentLabel">
                     <property name="frameShape">
                      <enum>QFrame::Shape::NoFrame</enum>
                     </property>
@@ -555,7 +592,7 @@
                    </widget>
                   </item>
                   <item row="3" column="1">
-                   <widget class="QLabel" name="observationsGpsContentLabel">
+                   <widget class="QLabel" name="observationGpsContentLabel">
                     <property name="text">
                      <string/>
                     </property>
@@ -565,7 +602,7 @@
                    </widget>
                   </item>
                   <item row="2" column="1">
-                   <widget class="QLabel" name="observationsCountryContentLabel">
+                   <widget class="QLabel" name="observationCountryContentLabel">
                     <property name="text">
                      <string/>
                     </property>
@@ -575,28 +612,28 @@
                    </widget>
                   </item>
                   <item row="2" column="0">
-                   <widget class="QLabel" name="observationsCountryLabel">
+                   <widget class="QLabel" name="observationCountryLabel">
                     <property name="text">
                      <string>Pays</string>
                     </property>
                    </widget>
                   </item>
                   <item row="1" column="0">
-                   <widget class="QLabel" name="observationsDepartmentLabel">
+                   <widget class="QLabel" name="observationDepartmentLabel">
                     <property name="text">
                      <string>Département</string>
                     </property>
                    </widget>
                   </item>
                   <item row="3" column="0">
-                   <widget class="QLabel" name="observationsGpsLabel">
+                   <widget class="QLabel" name="observationGpsLabel">
                     <property name="text">
                      <string>Coordonnées GPS</string>
                     </property>
                    </widget>
                   </item>
                   <item row="0" column="0">
-                   <widget class="QLabel" name="observationsCityLabel">
+                   <widget class="QLabel" name="observationCityLabel">
                     <property name="text">
                      <string>Commune</string>
                     </property>
@@ -608,7 +645,7 @@
               </widget>
              </item>
              <item row="4" column="0">
-              <widget class="QPushButton" name="observationsEditPushButton">
+              <widget class="QPushButton" name="observationEditPushButton">
                <property name="text">
                 <string>Editer</string>
                </property>
